--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     />
     <link href="<%= BASE_URL %>favicon.ico" rel="icon" />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta http-equiv="Cache-Control" content="no-store" />
   </head>
   <body>
     <noscript>
