MOVE vue use head to index.html, and redo favicon

--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,119 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
-    <meta content="width=device-width,initial-scale=1.0" name="viewport" />
+    <meta
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+      name="viewport"
+    />
     <meta name="author" content="W.K.D.Kavishka" />
     <meta
+      name="keywords"
+      content="Software Engineer, University of Colombo, Technology, Learning Software Developer, Web Development, Vue.js, JavaScript, TypeScript, Portfolio"
+    />
+    <meta http-equiv="Cache-Control" content="no-store" />
+    <meta
       name="description"
-      content="Undergraduate from University of Colombo School of Computing specializing in software engineering. Ready to utilize learned skills to further a company's mission. Eager to learn new skills and passionate about exploring new technologies."
+      content="WKDKavishka's portfolio showcases my web development skills, projects, and expertise in technologies like Vue.js, JavaScript, and TypeScript."
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="theme-color" content="#134E4A" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wkdkavishka.com/" />
+    <meta property="og:title" content="WKDKavishka - Software Developer" />
+    <meta
+      property="og:description"
+      content="Software Developer Portfolio showcasing web development projects and skills"
     />
     <meta
-      name="keywords"
-      content="Software Engineer, University of Colombo, Software Engineering, Technology, Learning"
+      property="og:image"
+      content="https://wkdkavishka.com/img/icons/Images/wkdk-logo.jpg"
     />
-    <link href="<%= BASE_URL %>favicon.ico" rel="icon" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    <meta http-equiv="Cache-Control" content="no-store" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://wkdkavishka.com/" />
+    <meta name="twitter:title" content="WKDKavishka - Software Developer" />
+    <meta
+      name="twitter:description"
+      content="Software Developer Portfolio showcasing web development projects and skills"
+    />
+    <meta
+      name="twitter:image"
+      content="https://wkdkavishka.com/img/icons/Images/wkdk-logo.jpg"
+    />
+
+    <!-- Favicons -->
+    <link rel="icon" href="./img/icons/favicon.ico" type="image/x-icon" />
+    <link
+      rel="icon"
+      href="./img/icons/favicon.ico"
+      sizes="16x16"
+      type="image/x-icon"
+    />
+    <link rel="icon" href="./img/icons/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" href="./img/icons/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" href="./img/icons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" href="./img/icons/favicon.svg" type="image/svg+xml" />
+
+    <!-- Android -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="./img/icons/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="./img/icons/android-chrome-512x512.png"
+    />
+
+    <!-- Apple Touch Icons -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./img/icons/apple-touch-icon-180x180.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./img/icons/apple-touch-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./img/icons/apple-touch-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./img/icons/apple-touch-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="./img/icons/apple-touch-icon-60x60.png"
+    />
+    <link rel="apple-touch-icon" href="./img/icons/apple-touch-icon.png" />
+
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="canonical" href="https://wkdkavishka.github.io/" />
+
+    <title>WKDKavishka - Software Developer</title>
   </head>
   <body>
     <noscript>
-      <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
-      >
+      <strong>
+        We're sorry but WKDKavishka - Software Developer doesn't work properly
+        without JavaScript enabled. Please enable it to continue.
+      </strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
