ADD search more tags

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="W.K.D.Kavishka" />
     <meta
       name="keywords"
-      content="Software Engineer, University of Colombo, Technology, Learning Software Developer, Web Development, Vue.js, JavaScript, TypeScript, Portfolio"
+      content="Dumindu Kavishka, WKDKavishka, Software Engineer, University of Colombo, Technology, Learning Software Developer, Web Development, Vue.js, JavaScript, TypeScript, Portfolio"
     />
     <meta http-equiv="Cache-Control" content="no-store" />
     <meta
