--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+    <meta http-equiv="Cache-Control" content="no-store" />
     <meta
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
       name="viewport"
     />
-    <meta name="author" content="W.K.D.Kavishka" />
+    <meta name="author" content="WKDKavishka" />
     <meta
       name="keywords"
-      content="Dumindu Kavishka, WKDKavishka, Software Engineer, University of Colombo, Technology, Learning Software Developer, Web Development, Vue.js, JavaScript, TypeScript, Portfolio"
+      content="Dumindu Kavishka, WKDKavishka, Software Engineer colombo, University of Colombo, "
     />
-    <meta http-equiv="Cache-Control" content="no-store" />
     <meta
       name="description"
-      content="WKDKavishka's portfolio showcases my web development skills, projects, and expertise in technologies like Vue.js, JavaScript, and TypeScript."
+      content="WKDKavishka's portfolio showcases my skills, projects, and expertise"
     />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
