--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,11 @@
       content="https://wkdkavishka.com/img/icons/Images/wkdk-logo.jpg"
     />
 
+    <!-- bing -->
+    <meta name="msvalidate.01" content="185F9F67BF12B1722515661E1F81C8B3" />
+
     <!-- Favicons -->
-    <link rel="icon" href="./img/icons/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link
       rel="icon"
       href="./img/icons/favicon.ico"
